2006-06-22  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/IN/IPSECKEY.py: Added support for the IPSECKEY RR type.

2006-06-21  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/SPF.py: Added support for the SPF RR type.

2006-06-02  Bob Halley  <halley@dnspython.org>

	* (Version 1.4.0 released)

2006-04-25  Bob Halley  <halley@dnspython.org>

	* dns/rrset.py (RRset.to_rdataset): Added a convenience method
	  to convert an rrset into an rdataset.

2006-03-27  Bob Halley  <halley@dnspython.org>

	* Added dns.e164.query().  This function can be used to look for
	  NAPTR RRs for a specified number in several domains, e.g.:

		dns.e164.query('16505551212',
			       ['e164.dnspython.org.', 'e164.arpa.'])

2006-03-26  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Resolver.query): The resolver deleted from
	  a list while iterating it, which makes the iterator unhappy.

2006-03-17  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Resolver.query): The resolver needlessly
	  delayed responses for successful queries.

2006-01-18  Bob Halley  <halley@dnspython.org>

	* dns/rdata.py: added a validate() method to the rdata class.  If
	  you change an rdata by assigning to its fields, it is a good
	  idea to call validate() when you are done making changes.
	  For example, if 'r' is an MX record and then you execute:

		r.preference = 100000   # invalid, because > 65535
		r.validate()

	  The validation will fail and an exception will be raised.

2006-01-11  Bob Halley  <halley@dnspython.org>

	* dns/ttl.py: TTLs are now bounds checked to be within the closed
	  interval [0, 2^31 - 1].

	* The BIND 8 TTL syntax is now accepted in the SOA refresh, retry,
	  expire, and minimum fields, and in the original_ttl field of
	  SIG and RRSIG records.

2006-01-04  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: The windows registry irritatingly changes the
	  list element delimiter in between ' ' and ',' (and vice-versa)